# claude-power-pack

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .woodpecker.yml  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_BEST_PRACTICES.md  CLAUDE_CODE_BEST_PRACTICES_COMPREHENSIVE.md  INSTALLATION_ISSUES.md  ISSUE_DRIVEN_DEVELOPMENT.md  Makefile  PROGRESSIVE_DISCLOSURE_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.smoke.yml  docker-compose.yml  fetch_reddit_posts.py  pyproject.toml  renovate.json  scrape_reddit.py
.agents/: CODEX_SETUP.md
.claude/: bootstrap.yaml  branch-protection.json  cicd.yml  cicd_tasks.yml  deprecated-mcps.yaml  deprecated-skills.yaml  eli5-vendor.json  hooks.json  retired-surfaces.yaml
.claude-plugin/: marketplace.json
.claude/commands/: dockers.md  load-best-practices.md  load-mcp-docs.md  project-lite.md  project-next.md
.claude/skills/: best-practices.md  browser-tiered.md  cicd-verification.md  claude-md-config.md  code-quality.md  context-efficiency.md  documentation.md  evaluate.md  hooks-automation.md  idd-workflow.md  infrastructure-hardening.md  mcp-optimization.md  powerpoint.md  project-deploy.md  secrets.md  session-management.md  skills-patterns.md  spec-driven-dev.md
.github/ISSUE_TEMPLATE/: best-practice.yml  bug-report.yml  config.yml  feature-request.yml
.specify/grills/: 2026-06-26-issue-395.md  2026-06-28-issue-398.md  2026-07-03-issue-423.md  2026-07-03-issue-437.md  2026-07-03-issue-438.md  2026-07-03-issue-439.md  2026-07-03-issue-440.md  2026-07-03-issue-445.md
.specify/memory/: constitution.md
aws-secrets-agent/: Dockerfile  config.toml  entrypoint.sh  fetch-secrets.sh
codex/: cpp-memory.md
docs/: AWS_SECRETS_SIDECAR.md  HOST_MANAGED_ARTIFACTS.md  cicd-reliability-review-implementation.md  cicd-reliability-synthesis.md
extras/: README.md
lib/creds/: __init__.py  __main__.py  audit.py  base.py  cli.py  config.py  credentials.py  masking.py  project.py  pyproject.toml  run.py
lib/creds/providers/: __init__.py  aws.py  dotenv.py  env.py
lib/creds/ui/: app.py
mcp-coordination/: README.md  environment.yml  pyproject.toml  start-server.sh
mcp-coordination/deploy/: mcp-coordination.service
mcp-coordination/src/: server.py
mcp-evaluate/: README.md  pyproject.toml
mcp-nano-banana/: .env.example  README.md  pyproject.toml
mcp-playwright-persistent/: .env.example  README.md  environment.yml  pyproject.toml  start-server.sh
mcp-second-opinion/: .env.example  README.md  config.py  environment.yml  prompts.py  pyproject.toml  server.py  start-server.sh
mcp-second-opinion/deploy/: Dockerfile  docker-compose.yml  fetch-secrets.sh  mcp-second-opinion.service  mcp-second-opinion.service.template
mcp-second-opinion/scripts/: install-service.sh  setup-api-key.sh  smoke-model-catalog.py  start-server.sh
mcp-second-opinion/src/: config.py  server.py
mcp-second-opinion/src/tools/: __init__.py  fetch_url.py  web_search.py
mcp-second-opinion/tools/: fetch_url.py
mcp-woodpecker-ci/: README.md  pyproject.toml
scripts/: assert-prod-env.sh  bash-prep.sh  bootstrap-check.sh  branch-protection.sh  check-aws-secret-keys.py  check-docker-aws-env.py  check-ignored-additions.sh  check-test-binary-guards.py  ci-docker-login.sh  codex-prompt-sync.py  codex-skill-gen.py  codex-skill-sync.py  commands-mirror-sync.sh  conda-activate.sh  conda-detect.sh  cpp-memory  docker-health-check.py  docker-refresh-transactional.sh  drift-detect.sh  eli5-core-drift.sh  eli5-vendor.py  fake-secrets-agent.py  flow-skill-sync.py  flow-stale-check.sh  flow-start-resolve.sh  flow-worktree-guard.sh  friction-log.sh  gh-pr-merge.sh  hook-pending-retro.sh  hook-permission-census.sh  hook-validate-command.sh  install-memory-harness.sh  mcp-drift.py  memories-db-setup.sh  plugin-flow-sync.sh  plugin-sync.sh  prompt-context.sh  pytest-locked.sh  retired-surface-prune.py  runtime-smoke.sh  (+11 more)
templates/: Makefile.example  cicd.yml.example  claude-settings-permissions.json  claude-settings-permissions.md  learnings.md.example  playwright-pool.example.json  qa.yml.example
tests/: conftest.py  test_aws_secret_key_check.py  test_bootstrap.py  test_branch_protection.py  test_c4_integration.py  test_c4_mermaid.py  test_check_ignored_additions.py  test_ci_dockerhub_auth.py  test_ci_secret_fetch_smoke.py  test_ci_smoke_retry.py  test_cicd_health.py  test_cicd_pipeline.py  test_cicd_verify.py  test_cicd_verify_invocation.py  test_codex_prompt_sync.py  test_codex_skill_gen.py  test_codex_skill_sync.py  test_config_validation.py  test_cpp_command_wiring.py  test_cpp_memory.py  test_cpp_memory_backends.py  test_creds_config.py  test_deploy_guardrails.py  test_deploy_integration.py  test_deploy_scripts.py  test_docker_aws_env_check.py  test_docker_compose_config.py  test_docker_health_check.py  test_drift_detect.py  test_dual_transport.py  test_eli5_vendor.py  test_failure_patterns.py  test_fetch_secrets.py  test_flow_helpers_install.py  test_flow_live_driver_guard.py  test_flow_skill_sync.py  test_flow_stale_check.py  test_flow_start_resolve.py  test_flow_worktree_claim.py  test_flow_worktree_native.py  (+25 more)
woodpecker/: docker-compose.agent.yml  docker-compose.yml
(+420 files in other folders)
