[project]
name = "claude-power-pack"
version = "7.3.0"
requires-python = ">=3.11"
# pydantic/pyyaml are runtime deps of lib.cicd (hard imports on the CLI chain);
# keeping them out of the dev extra lets `uv run --project` provision a working
# runner env in fresh checkouts/worktrees (issue #500).
dependencies = ["pydantic>=2.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["mypy>=1.10", "pytest>=8.0", "pytest-timeout>=2.3", "ruff>=0.4", "types-PyYAML>=6.0", "types-requests>=2.31"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Per-test wall-clock cap: a single wedged test aborts with a traceback instead
# of silently eating the runner's whole-suite budget (issue #537). Dogfoods the
# per-test-timeout the finish runner recommends to every project.
timeout = 120

[tool.mypy]
python_version = "3.11"
exclude = ["mcp-second-opinion", "mcp-evaluate"]
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
disable_error_code = ["var-annotated", "assignment", "arg-type", "attr-defined"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
