[project]
name = "mcp-coordination"
version = "1.0.0"
description = "Redis-backed distributed locking MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "cooneycw"}
]
dependencies = [
    "fastmcp>=2.0.0",
    "redis>=5.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
